[tool.poetry]
name = "lendable"
version = "0.1.0"
description = ""
authors = ["Michael Kilian <michael.john.kilian@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.96.0"
uvicorn = "^0.22.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
